--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
         <div class="email">
           <i class="bi bi-envelope"></i>
           <h4>Email:</h4>
-          <p>elisaferrraz.@gmail</p>
+          <p>elisa.ferraz23@gmail.com</p>
         </div>
 
         <div class="phone">
