--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
       <h1>Elisa Ferraz</h1>
-      <h2>Advogada Cívil</h2>
+      <h2>Advogada Cível</h2>
       <a href="about.html" class="btn-about">Sobre mim</a>
     </div>
   </section><!-- End Hero -->
